refactor(backend): align service tests with user scoped model